fix: Correctly align privacy policy text

--- a/snek/style.css
+++ b/snek/style.css
@@ -69,6 +69,10 @@ html {
     text-align: left;
 }
 
+.intro-text.privacy {
+    text-align: left;
+}
+
 .intro-text.privacy a {
     color: #00ffcc;
 }
